@@ -12,7 +12,4 @@ TODO
 
 - Optionally check imports inside doctests.
 
-- Optionally report separately on dependencies that should be moved from the
-  regular to the test dependencies.
 
-- Sort "missing requirements" reports and filter out duplicates.
