@@ -1,6 +1,7 @@
 setuptools
 zest.releaser
 unneeded.req
+needed.by.test
 
 [test]
 z3c.testsetup>=0.3
